--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
         function checkLogin(){
             var username = localStorage.getItem("username")
             if(!username){
-                window.location = "Login.html"
+                window.location = "login.html"
             }
             else{
                 document.getElementById("name").innerHTML = username
