--- a/login.html
+++ b/login.html
@@ -1,16 +1,107 @@
 <!DOCTYPE html>
 <html>
-	<head>	
-		<title>Login System</title>
-		<link rel="shortcut icon">
-	</head>
-	<body>
-		<form>
-			<input type="text" id="username" placeholder="Choose Username" >
-			<input type="password" id="password" placeholer="Choose Password" >
-			<button type="button" onclick="getInfo()">Click Me</button>
-		</form>
 
-		<script src="main.js"></script>
-	</body>
+<head>
+	<base target="_top">
+	<title>ระบบลงชื่อเข้าใช้งานฐานข้อมูล</title>
+	<link rel="shortcut icon">
+
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+	<!-- Font Awesome Icons -->
+	<link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
+	
+	<!-- DataTables -->
+	<link rel="stylesheet" href="plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+	<link rel="stylesheet" href="plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+	<!-- Select2 -->
+	<link rel="stylesheet" href="plugins/select2/css/select2.min.css" />
+	<link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css"/>
+	<!-- Theme style -->
+	<link rel="stylesheet" href="dist/css/adminlte.css">
+	<!-- Google Font: Source Sarabun -->
+	<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap" rel="stylesheet">
+
+
+	<style>
+		/* Chrome, Safari, Edge, Opera */
+		input::-webkit-outer-spin-button,
+		input::-webkit-inner-spin-button {
+		  -webkit-appearance: none;
+		  margin: 0;
+		}
+		
+		/* Firefox */
+		input[type=number] {
+		  -moz-appearance: textfield;
+		}
+		</style>
+</head>
+
+<body class="hold-transition login-page"
+	style="background-repeat: no-repeat; background-size: cover; background-position: center center;">
+
+
+
+
+	<!-- Class ลงชื่อเข้าใช้งาน -->
+	<div class="login-box">
+		<div class="card">
+			<div class="login-logo">
+				<div>
+					<img class="mb-4 mt-3" src="img/doaweb.png" alt="" width="80" height="80">
+				</div>
+
+
+				<h2> PheaaeriOnline </h2>
+				<h4> กลุ่มวิจัยวิศวกรรมหลังการเก็บเกี่ยว </h4>
+				<h4> กรมวิชาการเกษตร </h4>
+			</div>
+
+			<div class="card-body login-card-body">
+
+				<form>
+					<div class="form-group row">
+						<label class="col-sm-4 col-form-label">Username</label>
+						<div class="col-sm-8">
+							<!-- ทำเลือกชื่อผู้ใช้งาน -->
+							<select type="text" class="form-control" id="username" name="username"
+								placeholder="เลขบัตรประจำตัวประชาชน" required="required">
+								<option value="นายธีรภัทร์ บัวยศ">นายธีรภัทร์ บัวยศ</option>
+							</select>
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-4 col-form-label">Password</label>
+						<div class="col-sm-8">
+							<input type="password" class="form-control" id="password" name="password"
+								placeholder="รหัสผ่าน" required="required">
+						</div>
+					</div>
+
+					<div class="row justify-content-around">
+						<div class="col-12 mt-3">
+							<button class="btn btn-success btn-block " onclick="getInfo()" type="Button"
+								name="LoginButton" style="margin-bottom: 5px;"><i class="fas fa-sign-in-alt"></i>
+								เข้าสู่ระบบ</button>
+
+							<a href="***PDF***.pdf"><button class="btn btn-light btn-block " type="button"><i
+										class="fa fa-bookmark"></i> คู่มือการใช้งานระบบ</button></a>
+						</div>
+
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+	<script src="dist/js/adminlte.min.js"></script>
+	<script src="plugins/jquery/jquery.min.js"></script>
+	<script src="main.js"></script>
+</body>
+
 </html>
