--- a/login.html
+++ b/login.html
@@ -6,35 +6,36 @@
 	<title>ระบบลงชื่อเข้าใช้งานฐานข้อมูล</title>
 	<link rel="shortcut icon">
 
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 	<!-- Font Awesome Icons -->
 	<link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
-	
+
 	<!-- DataTables -->
 	<link rel="stylesheet" href="plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
 	<link rel="stylesheet" href="plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
 	<!-- Select2 -->
 	<link rel="stylesheet" href="plugins/select2/css/select2.min.css" />
-	<link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css"/>
+	<link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" />
 	<!-- Theme style -->
 	<link rel="stylesheet" href="dist/css/adminlte.css">
 	<!-- Google Font: Source Sarabun -->
-	<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
+		rel="stylesheet">
 
 
 	<style>
 		/* Chrome, Safari, Edge, Opera */
 		input::-webkit-outer-spin-button,
 		input::-webkit-inner-spin-button {
-		  -webkit-appearance: none;
-		  margin: 0;
+			-webkit-appearance: none;
+			margin: 0;
 		}
-		
+
 		/* Firefox */
 		input[type=number] {
-		  -moz-appearance: textfield;
+			-moz-appearance: textfield;
 		}
-		</style>
+	</style>
 </head>
 
 <body class="hold-transition login-page"
@@ -66,6 +67,11 @@
 							<!-- ทำเลือกชื่อผู้ใช้งาน -->
 							<select type="text" class="form-control" id="username" name="username"
 								placeholder="เลขบัตรประจำตัวประชาชน" required="required">
+								<option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
+								<option value="นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล</option>
+								<option value="นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์</option>
+								<option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์</option>
+								<option value="นายสุรชาติ ระย้าทอง">นายสุรชาติ ระย้าทอง</option>
 								<option value="นายธีรภัทร์ บัวยศ">นายธีรภัทร์ บัวยศ</option>
 							</select>
 						</div>
