--- a/login.html
+++ b/login.html
@@ -66,7 +66,8 @@
 						<div class="col-sm-8">
 							<!-- ทำเลือกชื่อผู้ใช้งาน -->
 							<select type="text" class="form-control" id="username" name="username"
-								placeholder="เลขบัตรประจำตัวประชาชน" required="required">
+								placeholder="username" required="required">
+								<option value="">เลือกชื่อผู้ใช้งาน</option>
 								<option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
 								<option value="นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล</option>
 								<option value="นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์</option>
