add img header index

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags ** type="module"-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Index</title>
-    <!--  <script type="module" src="./index.js"></script> -->
+	<base target="_top">
+	<title> กลุ่มวิจัยวิศวกรรมหลังการเก็บเกี่ยว  </title>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    
+
+
 
 </head>
 
@@ -16,6 +17,7 @@
 
 
     <center>
+        <img src="img/header.jpg" alt="Italian Trulli">
         <div class="login-logo">
             <h3> ลงชื่อเข้าใช้งาน </h3>
         </div>
