--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
 
 			<div class="card-body login-card-body">
 
-				<form>
+				<form method="post">
 					<div class="form-group row">
 						<label class="col-sm-4 col-form-label">Username</label>
 						<div class="col-sm-8">
