--- a/login.html
+++ b/login.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+
 	<base target="_top">
 	<title>ระบบลงชื่อเข้าใช้งานฐานข้อมูล</title>
 	<link rel="shortcut icon">
