--- a/login.html
+++ b/login.html
@@ -112,7 +112,7 @@
 
 	<script src="dist/js/adminlte.min.js"></script>
 	<script src="plugins/jquery/jquery.min.js"></script>
-	<script src="main.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
