--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@
                         </div>
 
                         <div class="col-12 mt-3">
-                            <a href="***PDF***.pdf"><button class="btn btn-light btn-block " type="button">
+                            <a href="leave-sacation.html"><button class="btn btn-light btn-block " type="button">
                                     <i class="fas fa-receipt"> </i> ใบลาพักผ่อน</button></a>
                         </div>
 
