--- a/leave-sacation.html
+++ b/leave-sacation.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- <base target="_top"> -->
-    <title>ใบลาป่วย / ใบลากิจ</title>
+    <title>ใบลาพักผ่อน</title>
     <link rel="shortcut icon">
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -61,7 +61,7 @@
 
 
                 <h2> PheaaeriOnline </h2>
-                <h5> ใบลาป่วย / ใบลากิจ</h5>
+                <h5> ใบลาพักผ่อน </h5>
                 <!-- <h5> ชื่อผู้ใช้งาน <h5 id="name">Username</h5> -->
             </div>
 
@@ -91,12 +91,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ประเภทการลา</label>
                         <div class="col-sm-8">
-                            <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="username" name="username"
-                                placeholder="username" required="required">
-                                <option value="ลาป่วย">ลาป่วย</option>
-                                <option value="ลากิจ">ลากิจ</option>
-                            </select>
+                            <input type="text" class="form-control" id="" name="log2" value="ลาพักผ่อน" placeholder="" readonly>     
                         </div>
                     </div>
 
@@ -117,18 +112,9 @@
                     </div>
 
                     <div class="form-group row">
-                        <label class="col-sm-4 col-form-label">เนื่องจาก</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" id="" name="log2" placeholder="">
-
-                        </div>
-                    </div>
-
-
-                    <div class="form-group row">
                         <label class="col-sm-4 col-form-label">มีกำหนด</label>
                         <div class="col-sm-8">
-                            <input type="number" class="form-control" id="" name="log2" placeholder="" min="1" max="30">
+                            <input type="number" class="form-control" id="" name="log2" placeholder="" min="1" max="2">
 
                         </div>
                     </div>
