--- a/login.html
+++ b/login.html
@@ -2,24 +2,22 @@
 <html>
 
 <head>
+	<base target="_top">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-	<base target="_top">
 	<title>ระบบลงชื่อเข้าใช้งานฐานข้อมูล</title>
-	<link rel="shortcut icon">
+	<link rel="shortcut icon" href="img/favicon.ico">
 
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 	<!-- Font Awesome Icons -->
 	<link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
-
 	<!-- DataTables -->
 	<link rel="stylesheet" href="plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
 	<link rel="stylesheet" href="plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
 	<!-- Select2 -->
-	<link rel="stylesheet" href="plugins/select2/css/select2.min.css" />
-	<link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" />
+	<link rel="stylesheet" href="plugins/select2/css/select2.min.css">
+	<link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
 	<!-- Theme style -->
 	<link rel="stylesheet" href="dist/css/adminlte.css">
 	<!-- Google Font: Source Sarabun -->
