--- a/leave-sacation.html
+++ b/leave-sacation.html
@@ -65,10 +65,39 @@
                 <!-- <h5> ชื่อผู้ใช้งาน <h5 id="name">Username</h5> -->
             </div>
 
+            <!-- Show leave-sacation Day  -->
+            <div class="card-body login-card-body">
+                <form method="post">
+
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">มีวันลาพักผ่อนสะสมประจำปีนี้</label>
+                        <div class="col-sm-8">
+                            <input id="lsday1" type="text" class="form-control" id="log2" name="log2" placeholder=""
+                                readonly>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">ลาพักผ่อนมาแล้ว</label>
+                        <div class="col-sm-8">
+                            <input id="lsday2" type="text" class="form-control" id="log2" name="log2" placeholder=""
+                                readonly>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">เหลือวันลาพักผ่อน</label>
+                        <div class="col-sm-8">
+                            <input id="lsday3" type="text" class="form-control" id="log2" name="log2" placeholder=""
+                                readonly>
+                        </div>
+                    </div>
+            </div>
 
 
 
 
+            <!-- Form leave-sacation -->
             <div class="card-body login-card-body">
                 <form method="post">
 
@@ -91,7 +120,8 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ประเภทการลา</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="" name="log2" value="ลาพักผ่อน" placeholder="" readonly>     
+                            <input type="text" class="form-control" id="" name="log2" value="ลาพักผ่อน" placeholder=""
+                                readonly>
                         </div>
                     </div>
 
@@ -141,8 +171,10 @@
                                 required="required">
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
                                 <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (ปฏิบัติราชการแทน)</option>
-                                <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร (ปฏิบัติราชการแทน)</option>
-                                <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล (ปฏิบัติราชการแทน)</option>
+                                <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร
+                                    (ปฏิบัติราชการแทน)</option>
+                                <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล (ปฏิบัติราชการแทน)
+                                </option>
 
                             </select>
                         </div>
@@ -169,7 +201,7 @@
     </div>
     </div>
     <!-- link JS-->
-    <script src="js/leave-sivk.js"></script>
+    <script src="js/leave-sacation.js"></script>
 
     <script>
         checkLogin();
