--- a/login.html
+++ b/login.html
@@ -71,11 +71,35 @@
 								placeholder="username" required="required">
 								<option value="">เลือกชื่อผู้ใช้งาน</option>
 								<option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
+								<option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร</option>
+								<option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล</option>
 								<option value="นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล</option>
 								<option value="นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์</option>
 								<option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์</option>
 								<option value="นายสุรชาติ ระย้าทอง">นายสุรชาติ ระย้าทอง</option>
+								<!-- <option value="">เลือกชื่อผู้ใช้งาน</option> -->
+								<option value="นายสันติ โพธิ์ทอง">นายสันติ โพธิ์ทอง</option>
+								<option value="ว่าที่ ร.ต.ปัญญาพล พูลสุข">ว่าที่ ร.ต.ปัญญาพล พูลสุข</option>
 								<option value="นายธีรภัทร์ บัวยศ">นายธีรภัทร์ บัวยศ</option>
+								<option value="นายอภิชาติ ยิ่งวุฒิวรกุล">นายอภิชาติ ยิ่งวุฒิวรกุล</option>
+								<option value="นายชาตรี หาศาสน์ศรี">นายชาตรี หาศาสน์ศรี</option>
+								<option value="นายปราโมทย์ จันทร์ประสงค์">นายปราโมทย์ จันทร์ประสงค์</option>
+								<option value="นายสกล สิงห์สี">นายสกล สิงห์สี</option>
+								<option value="นายเอก สุนทรวิภาต">นายเอก สุนทรวิภาต</option>
+								<option value="นายพยน ทรัพย์พล">นายพยน ทรัพย์พล</option>
+								<option value="นายอนุชา ชมดง">นายอนุชา ชมดง</option>
+								<option value="นายสมคิด นัยวงศ์">นายสมคิด นัยวงศ์</option>
+								<option value="นายสมบัติ ศรีประทุม">นายสมบัติ ศรีประทุม</option>
+								<option value="นายมาโนช เงินมี">นายมาโนช เงินมี</option>
+								<option value="น.ส.กฤตยา บุญสง่า">น.ส.กฤตยา บุญสง่า</option>
+								<option value="นางจงรักษ์ เชี่ยวไล่กุล">นางจงรักษ์ เชี่ยวไล่กุล</option>
+								<option value="นางมณีรัตน์ สุขโต">นางมณีรัตน์ สุขโต</option>
+								<option value="นางกัญญารัตน์ แสงวงษา">นางกัญญารัตน์ แสงวงษา</option>
+								<option value="นายสมนึก ศรสีดา">นายสมนึก ศรสีดา</option>
+								<option value="นายเลียด ผลสุก">นายเลียด ผลสุก</option>
+								<option value="นายสมบัติ ความคุ้นเคย">นายสมบัติ ความคุ้นเคย</option>
+								<option value="นายทศพร สิงหชัย">นายทศพร สิงหชัย</option>
+								<option value="น.ส.กัญญาวีร์ รวมพวก">น.ส.กัญญาวีร์ รวมพวก</option>
 							</select>
 						</div>
 					</div>
