--- a/leave-sick.html
+++ b/leave-sick.html
@@ -165,7 +165,7 @@
                     <div class="col-12 mt-3">
                         <button id="" class="btn btn-warning btn-block " type="Button" name="LogoutButton"
                             style="margin-bottom: 5px;"><i class="fas fa-sign-out-alt"></i>
-                            บันทึกข้อมูล</button>
+                            #บันทึกข้อมูล</button>
                     </div>
 
 
