--- a/login.html
+++ b/login.html
@@ -108,7 +108,7 @@
 						<label class="col-sm-4 col-form-label">Password</label>
 						<div class="col-sm-8">
 							<input type="password" class="form-control" id="password" name="password"
-								placeholder="รหัสผ่าน" required="required">
+								placeholder="รหัสผ่าน" value="123456" required="required" readonly>
 						</div>
 					</div>
 
