--- a/leave-sacation.html
+++ b/leave-sacation.html
@@ -60,7 +60,7 @@
                 </div>
 
 
-                <h2> PheaaeriOnline </h2>
+                <h2> PhegaeriOnline </h2>
                 <h5> แบบฟอร์มใบลาพักผ่อน </h5>
                 <!-- <h5> ชื่อผู้ใช้งาน <h5 id="name">Username</h5> -->
             </div>
