--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
                 </div>
 
 
-                <h2> PheaaeriOnline </h2>
+                <h2> PhegaeriOnline </h2>
                 <h5> ลงชื่อเข้าใช้งานเรียบร้อย</h5>
                 <h5> ชื่อผู้ใช้งาน <h5 id="name">Username</h5>
             </div>
