--- a/leave-sick.html
+++ b/leave-sick.html
@@ -20,11 +20,24 @@
     <!-- Select2 -->
     <link rel="stylesheet" href="plugins/select2/css/select2.min.css" />
     <link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" />
-    <!-- Theme style -->
+    <!-- Theme style **โครงสร้าง** -->
     <link rel="stylesheet" href="dist/css/adminlte.css">
+
+    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+
+
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
+
+
+
+    <!-- ************************   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> -->
 
 
     <style>
@@ -84,7 +97,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="เขียนวันที่" placeholder="">
+                            <input type="date" class="form-control" id="ran1" name="เขียนวันที่" placeholder="">
 
                         </div>
                     </div>
@@ -93,7 +106,7 @@
                         <label class="col-sm-4 col-form-label">ประเภทการลา</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="" name="ประเภทการลา" placeholder=""
+                            <select type="text" class="form-control" id="ran2" name="ประเภทการลา" placeholder=""
                                 required="required">
                                 <option value="ลาป่วย">ลาป่วย</option>
                                 <option value="ลากิจ">ลากิจ</option>
@@ -104,7 +117,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="ลาวันที่" placeholder="">
+                            <input type="date" class="form-control" id="ran3" name="ลาวันที่" placeholder="">
 
                         </div>
                     </div>
@@ -112,7 +125,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="ถึงวันที่" placeholder="">
+                            <input type="date" class="form-control" id="ran4" name="ถึงวันที่" placeholder="">
 
                         </div>
                     </div>
@@ -121,7 +134,7 @@
                         <label class="col-sm-4 col-form-label">มีกำหนด</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="" name="มีกำหนด" placeholder=""
+                            <select type="text" class="form-control" id="ran5" name="มีกำหนด" placeholder=""
                                 required="required">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -145,7 +158,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เนื่องจาก</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="" name="เนื่องจาก" placeholder="">
+                            <input type="text" class="form-control" id="ran6" name="เนื่องจาก" placeholder="">
 
                         </div>
                     </div>
@@ -154,7 +167,8 @@
                         <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="" name="ผู้ตรวจสอบ" placeholder="" required="required">
+                            <select type="text" class="form-control" id="ran7" name="ผู้ตรวจสอบ" placeholder=""
+                                required="required">
                                 <option value="น.ส.กฤตยา บุญสง่า">น.ส.กฤตยา บุญสง่า</option>
                                 <option value="นางจงรักษ์ เชี่ยวไล่กุล">นางจงรักษ์ เชี่ยวไล่กุล</option>
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
@@ -167,7 +181,7 @@
                         <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="" name="ผู้อนุมัติ" placeholder=""
+                            <select type="text" class="form-control" id="ran8" name="ผู้อนุมัติ" placeholder=""
                                 required="required">
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
                                 <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (ปฏิบัติราชการแทน)</option>
@@ -180,13 +194,118 @@
                         </div>
                     </div>
 
+                    <!-- ***สำเนา**
                     <div class="col-12 mt-3">
                         <button id="" class="btn btn-warning btn-block " type="submit" name="FormleavesickButton"
                             style="margin-bottom: 5px;"><i class="fas fa-sign-out-alt"></i>
                             บันทึกข้อมูล</button>
+                    </div> -->
+
+                    <div class="col-12 mt-3">
+                        <button id="" class="btn btn-warning btn-block " onclick="chaaa()" type="button"
+                            name="FormleavesickButton" style="margin-bottom: 5px;" data-bs-target="#myModal"
+                            data-bs-toggle="modal"><i class="fas fa-sign-out-alt"></i>
+                            ส่งข้อมูล</button>
                     </div>
 
+                    <!-- Modal HTML -->
+                    <div id="myModal" class="modal fade" data-bs-backdrop="static" tabindex="-1">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">ยืนยันข้อมูล</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                </div>
 
+                                <div class="modal-body">
+                                    <p>กรุณาตรวจสอบข้อมูลอีกครั้ง ก่อนกดบันทึกข้อมูล</p>
+                                    <p class="text-secondary"><small>If you don't save, your changes will
+                                            belost.</small></p>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
+                                            <input type="text" class="form-control" id="rown0" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">วันที่เขียน</label>
+                                            <input type="date" class="form-control" id="rown1" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ประเภทการลา</label>
+                                            <input type="text" class="form-control" id="rown2" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ลาวันที่</label>
+                                            <input type="date" class="form-control" id="rown3" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ถึงวันที่</label>
+                                            <input type="date" class="form-control" id="rown4" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">มีกำหนด</label>
+                                            <input type="text" class="form-control" id="rown5" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">เนื่องจาก</label>
+                                            <input type="text" class="form-control" id="rown6" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
+                                            <input type="text" class="form-control" id="rown7" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
+                                            <input type="text" class="form-control" id="rown8" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">แก้ไข</button>
+                                        <button id="" class="btn btn-warning btn-block " type="submit"
+                                            name="FormleavesickButton" style="margin-bottom: 5px;"><i
+                                                class="fas fa-sign-out-alt"></i>บันทึกข้อมูล</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modal HTML -->
 
                     <div class="col-12 mt-3">
                         <a href="./home.html"><button class="btn btn-light btn-block " type="button"><i
@@ -206,7 +325,7 @@
 
     <script>
         checkLogin();
-       function checkLogin() {
+        function checkLogin() {
             var username = localStorage.getItem("username")
             if (!username) {
                 window.location = "login.html"
@@ -216,16 +335,65 @@
                 document.getElementById("log2").value = username
             }
         }
-
     </script>
 
 
 
     <script src="dist/js/adminlte.min.js"></script>
+    <script src="dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins/jquery/jquery.min.js"></script>
+
     <script>
-        //var userlog = localStorage.getItem("username")
-        //console.log(userlog);
+        function chaaa() {
+
+            //ข้าพเจ้า
+            let na0 = localStorage.getItem("username")
+            document.getElementById("rown0").value = na0
+
+            //เขียนวันที่
+            let na1 = document.getElementById("ran1").value
+            document.getElementById("rown1").value = na1
+
+            //ประเภทการลา
+            let na2 = document.getElementById("ran2").value
+            document.getElementById("rown2").value = na2
+
+            //ลาวันที่
+            let na3 = document.getElementById("ran3").value
+            document.getElementById("rown3").value = na3
+
+            //ถึงวันที่
+            let na4 = document.getElementById("ran4").value
+            document.getElementById("rown4").value = na4
+
+            //มีกำหนด
+            let na5 = document.getElementById("ran5").value
+            document.getElementById("rown5").value = na5
+
+            //เนื่องจาก
+            let na6 = document.getElementById("ran6").value
+            document.getElementById("rown6").value = na6
+
+            //ผู้ตรวจสอบ
+            let na7 = document.getElementById("ran7").value
+            document.getElementById("rown7").value = na7
+
+            //ผู้อนุมัติ
+            let na8 = document.getElementById("ran8").value
+            document.getElementById("rown8").value = na8
+
+
+
+            //let ra = document.getElementById("ran0")
+
+            // let rowname1 = document.getElementById("rowname1");
+            // rowname1.innerHTML = na;
+
+
+            //var userlog = localStorage.getItem("username")
+            //onclick="getInfo()"
+            //console.log(ra);
+        }
     </script>
 </body>
 
