--- a/leave-sacation.html
+++ b/leave-sacation.html
@@ -20,8 +20,13 @@
     <!-- Select2 -->
     <link rel="stylesheet" href="plugins/select2/css/select2.min.css" />
     <link rel="stylesheet" href="plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" />
-    <!-- Theme style -->
+    <!-- Theme style **โครงสร้าง** -->
     <link rel="stylesheet" href="dist/css/adminlte.css">
+
+    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
@@ -101,7 +106,7 @@
 
             <!-- Form leave-sacation -->
             <div class="card-body login-card-body">
-                <form method="post">
+                <form method="post" id="formsacation">
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
@@ -114,7 +119,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="log2" placeholder="">
+                            <input type="date" class="form-control" id="" name="" placeholder="">
 
                         </div>
                     </div>
@@ -122,7 +127,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ประเภท</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="" name="log2" value="ลาพักผ่อน" placeholder=""
+                            <input type="text" class="form-control" id="" name="" value="ลาพักผ่อน" placeholder=""
                                 readonly>
                         </div>
                     </div>
@@ -130,7 +135,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="log2" placeholder="">
+                            <input type="date" class="form-control" id="" name="" placeholder="">
 
                         </div>
                     </div>
@@ -138,7 +143,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="log2" placeholder="">
+                            <input type="date" class="form-control" id="" name="" placeholder="">
 
                         </div>
                     </div>
@@ -170,10 +175,11 @@
                         <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="" name="username" placeholder="username"
+                            <select type="text" class="form-control" id="" name="" placeholder="username"
                                 required="required">
                                 <option value="น.ส.กฤตยา บุญสง่า">น.ส.กฤตยา บุญสง่า</option>
                                 <option value="นางจงรักษ์ เชี่ยวไล่กุล">นางจงรักษ์ เชี่ยวไล่กุล</option>
+                                <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
 
                             </select>
@@ -184,7 +190,7 @@
                         <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="" name="username" placeholder="username"
+                            <select type="text" class="form-control" id="" name="" placeholder="username"
                                 required="required">
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
                                 <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (ปฏิบัติราชการแทน)</option>
@@ -198,11 +204,111 @@
                     </div>
 
                     <div class="col-12 mt-3">
-                        <button id="" class="btn btn-warning btn-block " type="Button" name="LogoutButton"
-                            style="margin-bottom: 5px;"><i class="fas fa-sign-out-alt"></i>
-                            #บันทึกข้อมูล</button>
+                        <button id="" class="btn btn-warning btn-block " onclick="chaaa()" type="button"
+                            name="FormleavesickButton" style="margin-bottom: 5px;" data-bs-target="#myModal"
+                            data-bs-toggle="modal"><i class="fas fa-sign-out-alt"></i>
+                            ส่งข้อมูล</button>
                     </div>
 
+                    <!-- Modal HTML -->
+                    <div id="myModal" class="modal fade" data-bs-backdrop="static" tabindex="-1">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">ยืนยันข้อมูล</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                </div>
+
+                                <div class="modal-body">
+                                    <p style="color:red;">กรุณาตรวจสอบข้อมูลอีกครั้ง ก่อนกดบันทึกข้อมูล</p>
+                                    <!--<p class="text-secondary"><small>If you don't save, your changes will
+                                                                belost.</small></p> -->
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
+                                            <input type="text" class="form-control" id="rown0" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">วันที่เขียน</label>
+                                            <input type="date" class="form-control" id="rown1" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ประเภทการลา</label>
+                                            <input type="text" class="form-control" id="rown2" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ลาวันที่</label>
+                                            <input type="date" class="form-control" id="rown3" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ถึงวันที่</label>
+                                            <input type="date" class="form-control" id="rown4" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">มีกำหนด</label>
+                                            <input type="text" class="form-control" id="rown5" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">เนื่องจาก</label>
+                                            <input type="text" class="form-control" id="rown6" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
+                                            <input type="text" class="form-control" id="rown7" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-8">
+                                            <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
+                                            <input type="text" class="form-control" id="rown8" name="-" placeholder=""
+                                                readonly>
+                                        </div>
+                                    </div>
+
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary btn-block "
+                                            data-bs-dismiss="modal">แก้ไข</button>
+
+                                        <button id="" class="btn btn-success  btn-block " type="submit"
+                                            name="FormleavesickButton" style="margin-bottom: 3px;"><i
+                                                class="fas fa-sign-out-alt"></i>บันทึกข้อมูล</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modal HTML -->
 
 
                     <div class="col-12 mt-3">
@@ -219,25 +325,9 @@
     </div>
     <!-- link JS-->
     <script src="js/leave-sacation.js"></script>
-
-    <script>
-        checkLogin();
-        function checkLogin() {
-            var username = localStorage.getItem("username")
-            if (!username) {
-                window.location = "login.html"
-            }
-            else {
-                //document.getElementById("name").innerHTML = username
-                document.getElementById("log2").value = username
-            }
-        }
-
-    </script>
-
-
-
+    <!-- link *********** -->
     <script src="dist/js/adminlte.min.js"></script>
+    <script src="dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins/jquery/jquery.min.js"></script>
     <script>
         //var userlog = localStorage.getItem("username")
