--- a/leave-sick.html
+++ b/leave-sick.html
@@ -97,17 +97,16 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="ran1" name="เขียนวันที่" placeholder="">
+                            <input type="date" class="form-control" id="ran1" name="เขียนวันที่" placeholder="" >
 
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <label class="col-sm-4 col-form-label">ประเภทการลา</label>
+                        <label class="col-sm-4 col-form-label">ประเภท</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="ran2" name="ประเภทการลา" placeholder=""
-                                required="required">
+                            <select type="text" class="form-control" id="ran2" name="ประเภทการลา" placeholder="">
                                 <option value="ลาป่วย">ลาป่วย</option>
                                 <option value="ลากิจ">ลากิจ</option>
                             </select>
@@ -158,7 +157,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เนื่องจาก</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="ran6" name="เนื่องจาก" placeholder="">
+                            <input type="text" class="form-control" id="ran6" name="เนื่องจาก" placeholder="" >
 
                         </div>
                     </div>
@@ -224,72 +223,80 @@
                                             belost.</small></p> -->
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
                                             <input type="text" class="form-control" id="rown0" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
+
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">วันที่เขียน</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">วันที่เขียน</label>
                                             <input type="date" class="form-control" id="rown1" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ประเภท</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ประเภทการลา</label>
+
                                             <input type="text" class="form-control" id="rown2" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ลาวันที่</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ลาวันที่</label>
+
                                             <input type="date" class="form-control" id="rown3" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ถึงวันที่</label>
+
                                             <input type="date" class="form-control" id="rown4" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">มีกำหนด</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">มีกำหนด</label>
+
                                             <input type="text" class="form-control" id="rown5" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">เนื่องจาก</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">เนื่องจาก</label>
+
                                             <input type="text" class="form-control" id="rown6" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
+
                                             <input type="text" class="form-control" id="rown7" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
+
                                             <input type="text" class="form-control" id="rown8" name="-" placeholder=""
                                                 readonly>
                                         </div>
@@ -300,7 +307,7 @@
                                             data-bs-dismiss="modal">แก้ไข</button>
 
                                         <button id="" class="btn btn-success  btn-block " type="submit"
-                                            name="FormleavesickButton" style="margin-bottom: 3px;"><i
+                                            name="FormleavesickButton" style="margin-bottom: 1px;"><i
                                                 class="fas fa-sign-out-alt"></i>บันทึกข้อมูล</button>
                                     </div>
                                 </div>
