--- a/leave-sacation.html
+++ b/leave-sacation.html
@@ -111,7 +111,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="log2" name="log2" placeholder="" readonly>
+                            <input type="text" class="form-control" id="log2" name="" placeholder="" readonly>
 
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="" placeholder="">
+                            <input type="date" class="form-control" id="ran1" name="" placeholder="">
 
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ประเภท</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="" name="" value="ลาพักผ่อน" placeholder=""
+                            <input type="text" class="form-control" id="ran2" name="" value="ลาพักผ่อน" placeholder=""
                                 readonly>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="" placeholder="">
+                            <input type="date" class="form-control" id="ran3" name="" placeholder="">
 
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="" name="" placeholder="">
+                            <input type="date" class="form-control" id="ran4" name="" placeholder="">
 
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">มีกำหนด</label>
                         <div class="col-sm-8">
-                            <select type="number" class="form-control" id="" name="" placeholder="" required="required">
+                            <select type="number" class="form-control" id="ran5" name="" placeholder="" required="required">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -175,7 +175,7 @@
                         <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="" name="" placeholder="username"
+                            <select type="text" class="form-control" id="ran6" name="" placeholder="username"
                                 required="required">
                                 <option value="น.ส.กฤตยา บุญสง่า">น.ส.กฤตยา บุญสง่า</option>
                                 <option value="นางจงรักษ์ เชี่ยวไล่กุล">นางจงรักษ์ เชี่ยวไล่กุล</option>
@@ -190,7 +190,7 @@
                         <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="" name="" placeholder="username"
+                            <select type="text" class="form-control" id="ran7" name="" placeholder="username"
                                 required="required">
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
                                 <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (ปฏิบัติราชการแทน)</option>
