--- a/leave-sick.html
+++ b/leave-sick.html
@@ -105,7 +105,7 @@
                         <label class="col-sm-4 col-form-label">ประเภท</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="ran2" name="ประเภทการลา" placeholder="">
+                            <select type="text" class="form-control" id="ran2" name="ประเภท" placeholder="">
                                 <option value="ลาป่วย">ลาป่วย</option>
                                 <option value="ลากิจ">ลากิจ</option>
                             </select>
