--- a/leave-sacation.html
+++ b/leave-sacation.html
@@ -25,8 +25,8 @@
 
     <link rel="stylesheet" href="dist/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="dist/css/sweetalert.min.css">
+
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
@@ -111,7 +111,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="log2" name="" placeholder="" readonly>
+                            <input type="text" class="form-control" id="log2" name="ข้าพเจ้า" placeholder="" readonly>
 
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="ran1" name="" placeholder="">
+                            <input type="date" class="form-control" id="ran1" name="เขียนวันที่" placeholder="">
 
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="ran3" name="" placeholder="">
+                            <input type="date" class="form-control" id="ran3" name="ลาวันที่" placeholder="">
 
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="ran4" name="" placeholder="">
+                            <input type="date" class="form-control" id="ran4" name="ถึงวันที่" placeholder="">
 
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">มีกำหนด</label>
                         <div class="col-sm-8">
-                            <select type="number" class="form-control" id="ran5" name="" placeholder=""
+                            <select type="number" class="form-control" id="ran5" name="มีกำหนด" placeholder=""
                                 required="required">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -176,7 +176,7 @@
                         <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="ran6" name="" placeholder="username"
+                            <select type="text" class="form-control" id="ran6" name="ผู้ตรวจสอบ" placeholder=""
                                 required="required">
                                 <option value="น.ส.กฤตยา บุญสง่า">น.ส.กฤตยา บุญสง่า</option>
                                 <option value="นางจงรักษ์ เชี่ยวไล่กุล">นางจงรักษ์ เชี่ยวไล่กุล</option>
@@ -191,7 +191,7 @@
                         <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
-                            <select type="text" class="form-control" id="ran7" name="" placeholder="username"
+                            <select type="text" class="form-control" id="ran7" name="ผู้อนุมัติ" placeholder=""
                                 required="required">
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
                                 <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (ปฏิบัติราชการแทน)</option>
@@ -205,7 +205,7 @@
                     </div>
 
                     <div class="col-12 mt-3">
-                        <button id="" class="btn btn-warning btn-block " onclick="chaaa()" type="button"
+                        <button id="" class="btn btn-warning btn-block " onclick="checkformpopup()" type="button"
                             name="FormleavesickButton" style="margin-bottom: 5px;" data-bs-target="#myModal"
                             data-bs-toggle="modal"><i class="fas fa-sign-out-alt"></i>
                             ส่งข้อมูล</button>
@@ -222,8 +222,6 @@
 
                                 <div class="modal-body">
                                     <p style="color:red;">กรุณาตรวจสอบข้อมูลอีกครั้ง ก่อนกดบันทึกข้อมูล</p>
-                                    <!--<p class="text-secondary"><small>If you don't save, your changes will
-                                                                belost.</small></p> -->
 
                                     <div class="form-group row">
                                         <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
@@ -274,7 +272,7 @@
                                     </div>
 
                                     <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">เนื่องจาก</label>
+                                        <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                                         <div class="col-sm-8">
                                             <input type="text" class="form-control" id="rown6" name="-" placeholder=""
                                                 readonly>
@@ -282,24 +280,16 @@
                                     </div>
 
                                     <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
+                                        <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                                         <div class="col-sm-8">
                                             <input type="text" class="form-control" id="rown7" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
-                                        <div class="col-sm-8">
-                                            <input type="text" class="form-control" id="rown8" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary btn-block "
-                                            data-bs-dismiss="modal">แก้ไข</button>
+                                            data-bs-dismiss="modal">แก้ไขข้อมูล</button>
 
                                         <button id="" class="btn btn-success  btn-block " type="submit"
                                             name="FormleavesickButton" style="margin-bottom: 3px;"><i
@@ -326,7 +316,9 @@
     </div>
     <!-- link JS-->
     <script src="js/leave-sacation.js"></script>
+
     <!-- link *********** -->
+    <script src="dist/js/sweetalert.min.js"></script>
     <script src="dist/js/adminlte.min.js"></script>
     <script src="dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins/jquery/jquery.min.js"></script>
