--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
 
 				<h2> PhegaeriOnline </h2>
 				<h5> กลุ่มวิจัยวิศวกรรมหลังการเก็บเกี่ยว </h4>
-				<h5> กรมวิชาการเกษตร </h4>
+					<h5> กรมวิชาการเกษตร </h4>
 			</div>
 
 			<div class="card-body login-card-body">
@@ -86,13 +86,11 @@
 								<option value="นายปราโมทย์ จันทร์ประสงค์">นายปราโมทย์ จันทร์ประสงค์</option>
 								<option value="นายสกล สิงห์สี">นายสกล สิงห์สี</option>
 								<option value="นายเอก สุนทรวิภาต">นายเอก สุนทรวิภาต</option>
-								<option value="นายพยน ทรัพย์พล">นายพยน ทรัพย์พล</option>
 								<option value="นายอนุชา ชมดง">นายอนุชา ชมดง</option>
 								<option value="นายสมคิด นัยวงศ์">นายสมคิด นัยวงศ์</option>
 								<option value="นายสมบัติ ศรีประทุม">นายสมบัติ ศรีประทุม</option>
 								<option value="นายมาโนช เงินมี">นายมาโนช เงินมี</option>
-								<option value="น.ส.กฤตยา บุญสง่า">น.ส.กฤตยา บุญสง่า</option>
-								<option value="นางจงรักษ์ เชี่ยวไล่กุล">นางจงรักษ์ เชี่ยวไล่กุล</option>
+								<!-- //จ้างเหมา//
 								<option value="นางมณีรัตน์ สุขโต">นางมณีรัตน์ สุขโต</option>
 								<option value="นางกัญญารัตน์ แสงวงษา">นางกัญญารัตน์ แสงวงษา</option>
 								<option value="นายสมนึก ศรสีดา">นายสมนึก ศรสีดา</option>
@@ -100,6 +98,7 @@
 								<option value="นายสมบัติ ความคุ้นเคย">นายสมบัติ ความคุ้นเคย</option>
 								<option value="นายทศพร สิงหชัย">นายทศพร สิงหชัย</option>
 								<option value="น.ส.กัญญาวีร์ รวมพวก">น.ส.กัญญาวีร์ รวมพวก</option>
+								-->
 							</select>
 						</div>
 					</div>
