--- a/menu-all.html
+++ b/menu-all.html
@@ -57,7 +57,7 @@
                 </div>
 
 
-                <h2> PheaaeriOnline </h2>
+                <h2> PhegaeriOnline </h2>
                 <h5> กลุ่มวิจัยวิศวกรรมหลังการเก็บเกี่ยว</h5>
                 <h5> กรมวิชาการเกษตร </h5>
             </div>
