--- a/offsite.html
+++ b/offsite.html
@@ -173,8 +173,14 @@
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
                             <select type="text" class="form-control" id="ran7" name="หัวหน้างาน" placeholder=""
                                 required="required">
-                                <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
+                                <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร</option>
+                                <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล</option>
+                                <option value="นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล</option>
+                                <option value="นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์</option>
+                                <option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์</option>
+                                <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
+                                <option value="นายสุรชาติ ระย้าทอง">นายสุรชาติ ระย้าทอง</option>
 
                             </select>
                         </div>
