--- a/home.html
+++ b/home.html
@@ -84,9 +84,11 @@
                         -->
 
                         <div class="col-12 mt-3">
-                            <a href="offsite.html"><button class="btn btn-light btn-block " type="button">
-                                    <i class="fas fa-receipt"> </i> ใบขออนุญาตออกนอกสถานที่ </button></a>
-                        </div>                    
+                            <a href="offsite.html"><button class="btn btn-secondary btn-block" type="button">
+                                    </i> ใบขออนุญาตออกนอกสถานที่ </button></a>
+                        </div>
+                        <!--//icon //<i class="fas fa-receipt"></i> //-->
+
 
                         <!--
                         <div class="col-12 mt-3">
