--- a/offsite.html
+++ b/offsite.html
@@ -31,7 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
 
-
+    <!--
     <style>
         /* Chrome, Safari, Edge, Opera */
         input::-webkit-outer-spin-button,
@@ -45,6 +45,7 @@
             -moz-appearance: textfield;
         }
     </style>
+    -->
 
 </head>
 
@@ -303,6 +304,8 @@
                                         <button id="" class="btn btn-success  btn-block " type="submit"
                                             name="FormleavesickButton" style="margin-bottom: 3px;"><i
                                                 class="fas fa-sign-out-alt"></i>บันทึกข้อมูล</button>
+
+                                        <p style="font-size:13px; color:red;"> *** การบันทึกข้อมูลจะใช้เวลาประมาณ 10 วินาที กรุณารอสักครู่ เมื่อเสร็จแล้วจะมีข้อความแจ้งเตือน ***</p>
                                     </div>
                                 </div>
                             </div>
